--- a/styles.css
+++ b/styles.css
@@ -74,14 +74,10 @@ body {
     background-color: var(--building-color4);
 }
 
+.background-buildings,
 .foreground-buildings {
-    width: 100%;
-    height: 100%;
     position: absolute;
     top: 0;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-evenly;
 }
 
 .fb1 {
