--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ body {
     justify-content: space-evenly;
 }
 
+/* BACKGROUND BUILDINGS - "bb" stands for "background building" */
+
 .bb1 {
     width: 10%;
     height: 70%;
@@ -80,6 +82,8 @@ body {
     top: 0;
 }
 
+/* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
+
 .fb1 {
     width: 10%;
     height: 60%;
@@ -102,12 +106,16 @@ body {
     width: 8%;
     height: 45%;
     background-color: var(--building-color1);
+    position: relative;
+    left: 10%;
 }
   
 .fb5 {
     width: 10%;
     height: 33%;
     background-color: var(--building-color2);
+    position: relative;
+    right: 10%;
 }
   
 .fb6 {
