--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     --building-color2: #66cc99;
     --building-color3: #cc6699;
     --building-color4: #538cc6;
+    --window-color1: black;
 }
 
 * {
@@ -16,12 +17,14 @@ body {
     overflow: hidden;
 }
 
-.background-buildings {
+.background-buildings, .foreground-buildings {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: flex-end;
     justify-content: space-evenly;
+    position: absolute;
+    top: 0;
 }
 
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
@@ -74,12 +77,6 @@ body {
     width: 11%;
     height: 58%;
     background-color: var(--building-color4);
-}
-
-.background-buildings,
-.foreground-buildings {
-    position: absolute;
-    top: 0;
 }
 
 /* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
