--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@ body {
 
 .bb1a {
     width: 70%;
-    height: 10%;
     background-color: var(--building-color1);
 }
 
@@ -59,6 +58,14 @@ body {
     width: 100%;
     height: 70%;
     background-color: var(--building-color1);
+}
+
+.bb1-window {
+    height: 10%;
+    background: linear-gradient(
+      var(--building-color1),
+      var(--window-color1)
+    );
 }
 
 .bb2 {
