--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,8 @@ body {
 .bb1d {
     width: 100%;
     height: 70%;
-    background-color: var(--building-color1);
-    background: linear-gradient(orange,
-      var(--building-color1),
+    background: linear-gradient(
+      var(--building-color1) 50%,
       var(--window-color1)
     );
 }
