--- a/styles.css
+++ b/styles.css
@@ -231,6 +231,11 @@ body {
     left: 10%;
 }
 
+.fb4a {
+    border-top: 5vh solid transparent;
+    border-left: 8vw solid var(--building-color1);
+}
+
 .fb4b {
     width: 100%;
     height: 89%;
@@ -253,6 +258,19 @@ body {
     background-color: var(--building-color2);
     position: relative;
     right: 10%;
+    background: repeating-linear-gradient(
+        var(--building-color2),
+        var(--building-color2) 5%,
+        transparent 5%,
+        transparent 10%
+    ),
+    repeating-linear-gradient(
+        90deg,
+        var(--building-color2),
+        var(--building-color2) 12%,
+        var(--window-color2) 12%,
+        var(--window-color2) 44%
+    );
 }
   
 .fb6 {
