--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,15 @@ body {
     justify-content: space-evenly;
 }
 
+.sky {
+    background: radial-gradient(
+        #ffcf33,
+        #ffcf33 20%,
+        #ffff66 21%,
+        #bbeeff 100% 
+    );
+}
+
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 
 .bb1 {
