--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
 
 .sky {
     background: radial-gradient(
+        circle closest-corner at 15% 15%,
         #ffcf33,
         #ffcf33 20%,
         #ffff66 21%,
