--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,16 @@ body {
 }
 
 @media (max-width: 1000px) {
+    :root {
+        --building-color1: #000;
+        --building-color2: #000;
+        --building-color3: #000;
+        --building-color4: #000;
+        --window-color1: #bb99ff;
+        --window-color2: #8cd9b3;
+        --window-color3: #d98cb3;
+        --window-color4: #8cb3d9;
+    }
     .sky {
         background: radial-gradient(
             closest-corner circle at 15% 15%,
