--- a/styles.css
+++ b/styles.css
@@ -305,10 +305,10 @@ body {
         --building-color2: #000;
         --building-color3: #000;
         --building-color4: #000;
-        --window-color1: #bb99ff;
-        --window-color2: #8cd9b3;
-        --window-color3: #d98cb3;
-        --window-color4: #8cb3d9;
+        --window-color1: #777;
+        --window-color2: #777;
+        --window-color3: #777;
+        --window-color4: #777;
     }
     .sky {
         background: radial-gradient(
